--- a/k8s/workloads/service-game.yaml
+++ b/k8s/workloads/service-game.yaml
@@ -7,7 +7,8 @@ metadata:
     app.kubernetes.io/name: factorio
     app.kubernetes.io/component: game-server
 spec:
-  type: NodePort
+  type: ClusterIP
+  clusterIP: None
   selector:
     app: factorio
   ports:
@@ -15,5 +16,3 @@ spec:
       protocol: UDP
       port: 34197
       targetPort: 34197
-      nodePort: 34197
-  externalTrafficPolicy: Cluster
