--- a/k8s/workloads/statefulset.yaml
+++ b/k8s/workloads/statefulset.yaml
@@ -49,6 +49,7 @@ spec:
           ports:
             - name: game
               containerPort: 34197
+              hostPort: 34197
               protocol: UDP
             - name: rcon
               containerPort: 27015
