Add sealed secret for Factorio game password and update server settings to use it

--- a/k8s/config/server-settings.yaml
+++ b/k8s/config/server-settings.yaml
@@ -16,7 +16,7 @@ data:
       "max_players": 0,
       "_comment_visibility": "public: Game will be published on the official Factorio matching server. lan: Game will be broadcast on LAN",
       "visibility": {
-        "public": true,
+        "public": false,
         "lan": false
       },
       "_comment_credentials": "Your factorio.com login credentials. Required for games with visibility public",
