Update Factorio container image to latest-rootless version

--- a/k8s/workloads/statefulset.yaml
+++ b/k8s/workloads/statefulset.yaml
@@ -58,7 +58,7 @@ spec:
             runAsNonRoot: true
       containers:
         - name: factorio
-          image: factoriotools/factorio:stable-rootless
+          image: factoriotools/factorio:latest-rootless
           imagePullPolicy: IfNotPresent
           ports:
             - name: game
