--- a/k8s/config/server-settings.yaml
+++ b/k8s/config/server-settings.yaml
@@ -9,11 +9,11 @@ metadata:
 data:
   server-settings.json: |
     {
-      "name": "My Factorio Server",
-      "description": "Dedicated Factorio server running on Kubernetes",
+      "name": "Pacabytes Factorio Server",
+      "description": "The factory must grow!",
       "tags": ["game", "cooperative"],
       "_comment_max_players": "Maximum number of players allowed, admins can join even a full server. 0 means unlimited.",
-      "max_players": 0,
+      "max_players": 5,
       "_comment_visibility": "public: Game will be published on the official Factorio matching server. lan: Game will be broadcast on LAN",
       "visibility": {
         "public": false,
