--- a/k8s/workloads/statefulset.yaml
+++ b/k8s/workloads/statefulset.yaml
@@ -86,6 +86,18 @@ spec:
               value: "my-server"
             - name: UPDATE_MODS_ON_START
               value: "true"
+            - name: USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: factorio-mod-credentials
+                  key: username
+                  optional: true
+            - name: TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: factorio-mod-credentials
+                  key: token
+                  optional: true
           resources:
             requests:
               cpu: "2000m"
