Add 'informatron' and 'Todo-List' mods to the mod list configuration

--- a/k8s/config/mod-list.yaml
+++ b/k8s/config/mod-list.yaml
@@ -29,6 +29,14 @@ data:
         {
           "name": "RateCalculator",
           "enabled": true
+        },
+        {
+          "name": "informatron",
+          "enabled": true
+        },
+        {
+          "name": "Todo-List",
+          "enabled": true
         }
       ]
     }
