Update README.md for formatting consistency and add 'Nanobots2' mod to mod list configuration

--- a/k8s/config/mod-list.yaml
+++ b/k8s/config/mod-list.yaml
@@ -37,6 +37,10 @@ data:
         {
           "name": "Todo-List",
           "enabled": true
+        },
+        {
+          "name": "Nanobots2",
+          "enabled": true
         }
       ]
     }
