Add 'stdlib2' mod to the mod list configuration

--- a/k8s/config/mod-list.yaml
+++ b/k8s/config/mod-list.yaml
@@ -23,6 +23,10 @@ data:
           "enabled": true
         },
         {
+          "name": "stdlib2",
+          "enabled": true
+        },
+        {
           "name": "flib",
           "enabled": true
         },
