Add server admin list configuration and update StatefulSet to use it

--- a/k8s/config/kustomization.yaml
+++ b/k8s/config/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - server-settings.yaml
+  - server-adminlist.yaml
   - sealed-secret.yaml
   - mod-list.yaml
   - sealed-secret-mod-credentials.yaml
