Add 'calculator-ui', 'GUI_Unifyer', and 'textplates' mods to the mod list configuration

--- a/k8s/config/mod-list.yaml
+++ b/k8s/config/mod-list.yaml
@@ -67,6 +67,18 @@ data:
           "enabled": true
         },
         {
+          "name": "calculator-ui",
+          "enabled": true
+        },
+        {
+          "name": "GUI_Unifyer",
+          "enabled": true
+        },
+        {
+          "name": "textplates",
+          "enabled": true
+        },
+        {
           "name": "Nanobots2",
           "enabled": true
         }
